maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:2: error: Missing closing brace `}' assumed here
override def run() {var test1:Boolean=false; var test2:Boolean=false;  
^IslandMaze:2: error: expected start of definition
override def run() {var test1:Boolean=false; var test2:Boolean=false;  
         ^