maze.island.IslandMaze.scala.code
override def run() {var test1:Boolean=false; var test2:Boolean=false;  
  
while (!isFacingWall()) {forward()}; right(); while ((!test1)&&(!isFacingWall())) {forward(); left(); if (!isFacingWall()) {test1=true} else {right()}; while ((!test2)&&(!isFacingWall())) {}}